[build-system]
requires=[
    "setuptools>=57.5.0",
    "wheel",
    "appdirs",
    "sip==5.5.0",
    "twine",
    "requests",
    "requests[security]",
    "cython==0.29.24",
    "pytest",
    "pytest-xdist",
    "pytest-forked",
    "pytest-timeout",
    "sphinx==2.2.0",
    "doc2dash==2.3.0",
    "beautifulsoup4"
]   # PEP 508 specifications.
build-backend="setuptools.build_meta"

[project]
name="wxPython"
authors=[
  {name="Robin Dunn", email="robin@alldunn.com"},
]
description="Cross platform GUI toolkit for Python, \"Phoenix\" version"
long_description= "Welcome to wxPython's Project Phoenix! Phoenix is the improved next-generation wxPython, \"better, stronger, faster than he was before.\" This new implementation is focused on improving speed, maintainability and extensibility. Just like "Classic" wxPython, Phoenix wraps the wxWidgets C++ toolkit and provides access to the user interface portions of the wxWidgets API, enabling Python applications to have a native GUI on Windows, Macs or Unix systems, with a native look and feel and requiring very little (if any) platform specific code."
readme="README.md"
license={text="wxWindows Library License (https://opensource.org/licenses/wxwindows.php)"}
requires-python=">=3.6"
platforms=["WIN32", "WIN64", "OSX", "POSIX",]
keywords=["GUI", "wx", "wxWindows", "wxWidgets", "cross-platform", "user-interface", "awesome",]
zip-safe=False
classifiers=[
    "Development Status :: 6 - Mature",
    "Environment :: MacOS X :: Cocoa",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: User Interfaces",
]
dependencies=[
    "numpy",
    "pillow",
    "six",
]
dynamic=["version", ]

[project.urls]
Homepage="http://wxPython.org/"
Download="https://pypi.org/project/wxPython"

[project.scripts]
img2png="wx.tools.img2png:main"
img2py="wx.tools.img2py:main"
img2xpm="wx.tools.img2xpm:main"
pywxrc="wx.tools.pywxrc:main"
wxget="wx.tools.wxget:main"  # New wx wget
wxdocs="wx.tools.wxget_docs_demo:docs_main"  # Get/Launch Docs
wxdemo="wx.tools.wxget_docs_demo:demo_main"  # Get/Launch Demo
helpviewer="wx.tools.helpviewer:main"
pycrust="wx.py.PyCrust:main"
pyshell="wx.py.PyShell:main"
pyslices="wx.py.PySlices:main"
pyslicesshell="wx.py.PySlicesShell:main"


[tool.setuptools.packages.find]
where=["wx"]
