[project]
name = "wxPython"
dynamic = [
    "authors",
    "classifiers",
    "dependencies",
    "description",
    "keywords",
    "license",
    "readme",
    "scripts",
    "urls",
    "version",
]

[build-system]
requires = [
    "setuptools>=70.1",
    "cython == 3.0.10",
    "requests >= 2.26.0",
    "sip == 6.9.1",
]
# Using "setuptools.build_meta:__legacy__" instead of "setuptools.build_meta" for now.
# Allows to have access to the folder on the search path when building, like before.
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools.packages.find]
namespaces = false
